--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.mikhaellopez:circularimageview:3.1.0'
+    implementation 'com.ramotion.garlandview:garland-view:0.3.2'
+    implementation 'com.ramotion.expandingcollection:expanding-collection:0.9.0'
 }
