--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.1.0'
     implementation 'com.ramotion.garlandview:garland-view:0.3.2'
     implementation 'com.ramotion.expandingcollection:expanding-collection:0.9.0'
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
 }
