contact us layout5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name=".ContactUs2"
             android:screenOrientation="portrait" />
+        <activity android:name=".SuggestFormActivity" />
     </application>
 
 </manifest>
